--- a/projfrontend/public/index.html
+++ b/projfrontend/public/index.html
@@ -27,7 +27,7 @@
       integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
       crossorigin="anonymous"
     />
-    <title>My Tshirt store</title>
+    <title>My Store</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
